# documentation-example

./: 404.html  index.html  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: mkdocs-deploy.yml
