[tool.poetry]
name = "documentation-example"
version = "0.1.0"
description = ""
authors = ["RincewindWizzard <git@magierdinge.de>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
